norm/normParser.py
# Generated from /home/ax/Workspace/supernorm/norm/norm.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class normParser ( Parser ):

    grammarFileName = "norm.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'@'", "'?'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "':'", "';'", "','", "'.'", "'..'", "<INVALID>", "<INVALID>", 
                     "'=='", "'!='", "'>='", "'<='", "'>'", "'<'", "'~'", 
                     "'-'", "'+'", "'*'", "'/'", "'**'", "'%'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'%}'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "SINGLELINE", 
                      "MULTILINE", "SPACED_EXPORT", "SPACED_IMPORT", "WS", 
                      "NS", "LBR", "RBR", "LCBR", "RCBR", "LSBR", "RSBR", 
                      "NONE", "AS", "COLON", "SEMICOLON", "COMMA", "DOT", 
                      "DOTDOT", "IN", "NI", "EQ", "NE", "GE", "LE", "GT", 
                      "LT", "LK", "MINUS", "PLUS", "TIMES", "DIVIDE", "EXP", 
                      "MOD", "NOT", "AND", "OR", "XOR", "IMP", "EQV", "BOOLEAN", 
                      "INTEGER", "FLOAT", "STRING", "PATTERN", "UUID", "URL", 
                      "DATETIME", "SHOW", "DELETE", "PYTHON_BLOCK", "SQL_BLOCK", 
                      "BLOCK_END", "VARNAME" ]

    RULE_script = 0
    RULE_statement = 1
    RULE_comments = 2
    RULE_exports = 3
    RULE_imports = 4
    RULE_argumentDeclaration = 5
    RULE_argumentDeclarations = 6
    RULE_typeDeclaration = 7
    RULE_version = 8
    RULE_typeName = 9
    RULE_variable = 10
    RULE_queryProjection = 11
    RULE_constant = 12
    RULE_code = 13
    RULE_codeExpression = 14
    RULE_argumentExpression = 15
    RULE_argumentExpressions = 16
    RULE_evaluationExpression = 17
    RULE_slicedExpression = 18
    RULE_arithmeticExpression = 19
    RULE_conditionExpression = 20
    RULE_oneLineExpression = 21
    RULE_multiLineExpression = 22
    RULE_none = 23
    RULE_bool_c = 24
    RULE_integer_c = 25
    RULE_float_c = 26
    RULE_string_c = 27
    RULE_pattern = 28
    RULE_uuid = 29
    RULE_url = 30
    RULE_datetime = 31
    RULE_logicalOperator = 32
    RULE_spacedLogicalOperator = 33
    RULE_newlineLogicalOperator = 34
    RULE_conditionOperator = 35
    RULE_spacedConditionOperator = 36

    ruleNames =  [ "script", "statement", "comments", "exports", "imports", 
                   "argumentDeclaration", "argumentDeclarations", "typeDeclaration", 
                   "version", "typeName", "variable", "queryProjection", 
                   "constant", "code", "codeExpression", "argumentExpression", 
                   "argumentExpressions", "evaluationExpression", "slicedExpression", 
                   "arithmeticExpression", "conditionExpression", "oneLineExpression", 
                   "multiLineExpression", "none", "bool_c", "integer_c", 
                   "float_c", "string_c", "pattern", "uuid", "url", "datetime", 
                   "logicalOperator", "spacedLogicalOperator", "newlineLogicalOperator", 
                   "conditionOperator", "spacedConditionOperator" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    SINGLELINE=3
    MULTILINE=4
    SPACED_EXPORT=5
    SPACED_IMPORT=6
    WS=7
    NS=8
    LBR=9
    RBR=10
    LCBR=11
    RCBR=12
    LSBR=13
    RSBR=14
    NONE=15
    AS=16
    COLON=17
    SEMICOLON=18
    COMMA=19
    DOT=20
    DOTDOT=21
    IN=22
    NI=23
    EQ=24
    NE=25
    GE=26
    LE=27
    GT=28
    LT=29
    LK=30
    MINUS=31
    PLUS=32
    TIMES=33
    DIVIDE=34
    EXP=35
    MOD=36
    NOT=37
    AND=38
    OR=39
    XOR=40
    IMP=41
    EQV=42
    BOOLEAN=43
    INTEGER=44
    FLOAT=45
    STRING=46
    PATTERN=47
    UUID=48
    URL=49
    DATETIME=50
    SHOW=51
    DELETE=52
    PYTHON_BLOCK=53
    SQL_BLOCK=54
    BLOCK_END=55
    VARNAME=56

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ScriptContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(normParser.StatementContext)
            else:
                return self.getTypedRuleContext(normParser.StatementContext,i)


        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(normParser.WS)
            else:
                return self.getToken(normParser.WS, i)

        def NS(self, i:int=None):
            if i is None:
                return self.getTokens(normParser.NS)
            else:
                return self.getToken(normParser.NS, i)

        def getRuleIndex(self):
            return normParser.RULE_script

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScript" ):
                listener.enterScript(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScript" ):
                listener.exitScript(self)




    def script(self):

        localctx = normParser.ScriptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_script)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.statement()
            self.state = 81
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 76
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                    if la_ == 1:
                        self.state = 75
                        _la = self._input.LA(1)
                        if not(_la==normParser.WS or _la==normParser.NS):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()


                    self.state = 78
                    self.statement() 
                self.state = 83
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==normParser.WS or _la==normParser.NS:
                self.state = 84
                _la = self._input.LA(1)
                if not(_la==normParser.WS or _la==normParser.NS):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comments(self):
            return self.getTypedRuleContext(normParser.CommentsContext,0)


        def SEMICOLON(self):
            return self.getToken(normParser.SEMICOLON, 0)

        def imports(self):
            return self.getTypedRuleContext(normParser.ImportsContext,0)


        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(normParser.WS)
            else:
                return self.getToken(normParser.WS, i)

        def NS(self, i:int=None):
            if i is None:
                return self.getTokens(normParser.NS)
            else:
                return self.getToken(normParser.NS, i)

        def exports(self):
            return self.getTypedRuleContext(normParser.ExportsContext,0)


        def typeDeclaration(self):
            return self.getTypedRuleContext(normParser.TypeDeclarationContext,0)


        def typeName(self):
            return self.getTypedRuleContext(normParser.TypeNameContext,0)


        def COLON(self):
            return self.getToken(normParser.COLON, 0)

        def EQ(self):
            return self.getToken(normParser.EQ, 0)

        def multiLineExpression(self):
            return self.getTypedRuleContext(normParser.MultiLineExpressionContext,0)


        def OR(self):
            return self.getToken(normParser.OR, 0)

        def AND(self):
            return self.getToken(normParser.AND, 0)

        def getRuleIndex(self):
            return normParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = normParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 186
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,25,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 87
                self.comments()
                self.state = 88
                self.match(normParser.SEMICOLON)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==normParser.SINGLELINE or _la==normParser.MULTILINE:
                    self.state = 90
                    self.comments()


                self.state = 93
                self.imports()
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==normParser.WS or _la==normParser.NS:
                    self.state = 94
                    _la = self._input.LA(1)
                    if not(_la==normParser.WS or _la==normParser.NS):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 97
                self.match(normParser.SEMICOLON)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==normParser.SINGLELINE or _la==normParser.MULTILINE:
                    self.state = 99
                    self.comments()


                self.state = 102
                self.exports()
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==normParser.WS or _la==normParser.NS:
                    self.state = 103
                    _la = self._input.LA(1)
                    if not(_la==normParser.WS or _la==normParser.NS):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 106
                self.match(normParser.SEMICOLON)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==normParser.SINGLELINE or _la==normParser.MULTILINE:
                    self.state = 108
                    self.comments()


                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==normParser.WS or _la==normParser.NS:
                    self.state = 111
                    _la = self._input.LA(1)
                    if not(_la==normParser.WS or _la==normParser.NS):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 114
                self.typeDeclaration()
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==normParser.WS or _la==normParser.NS:
                    self.state = 115
                    _la = self._input.LA(1)
                    if not(_la==normParser.WS or _la==normParser.NS):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 118
                self.match(normParser.SEMICOLON)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==normParser.SINGLELINE or _la==normParser.MULTILINE:
                    self.state = 120
                    self.comments()


                self.state = 123
                self.typeName()
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==normParser.WS or _la==normParser.NS:
                    self.state = 124
                    _la = self._input.LA(1)
                    if not(_la==normParser.WS or _la==normParser.NS):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 127
                self.match(normParser.COLON)
                self.state = 128
                self.match(normParser.EQ)
                self.state = 130
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==normParser.WS or _la==normParser.NS:
                    self.state = 129
                    _la = self._input.LA(1)
                    if not(_la==normParser.WS or _la==normParser.NS):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 132
                self.multiLineExpression()
                self.state = 134
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==normParser.WS or _la==normParser.NS:
                    self.state = 133
                    _la = self._input.LA(1)
                    if not(_la==normParser.WS or _la==normParser.NS):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 136
                self.match(normParser.SEMICOLON)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==normParser.SINGLELINE or _la==normParser.MULTILINE:
                    self.state = 138
                    self.comments()


                self.state = 141
                self.typeName()
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==normParser.WS or _la==normParser.NS:
                    self.state = 142
                    _la = self._input.LA(1)
                    if not(_la==normParser.WS or _la==normParser.NS):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 145
                self.match(normParser.OR)
                self.state = 146
                self.match(normParser.EQ)
                self.state = 148
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==normParser.WS or _la==normParser.NS:
                    self.state = 147
                    _la = self._input.LA(1)
                    if not(_la==normParser.WS or _la==normParser.NS):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 150
                self.multiLineExpression()
                self.state = 152
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==normParser.WS or _la==normParser.NS:
                    self.state = 151
                    _la = self._input.LA(1)
                    if not(_la==normParser.WS or _la==normParser.NS):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 154
                self.match(normParser.SEMICOLON)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 157
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==normParser.SINGLELINE or _la==normParser.MULTILINE:
                    self.state = 156
                    self.comments()


                self.state = 159
                self.typeName()
                self.state = 161
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==normParser.WS or _la==normParser.NS:
                    self.state = 160
                    _la = self._input.LA(1)
                    if not(_la==normParser.WS or _la==normParser.NS):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 163
                self.match(normParser.AND)
                self.state = 164
                self.match(normParser.EQ)
                self.state = 166
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==normParser.WS or _la==normParser.NS:
                    self.state = 165
                    _la = self._input.LA(1)
                    if not(_la==normParser.WS or _la==normParser.NS):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 168
                self.multiLineExpression()
                self.state = 170
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==normParser.WS or _la==normParser.NS:
                    self.state = 169
                    _la = self._input.LA(1)
                    if not(_la==normParser.WS or _la==normParser.NS):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 172
                self.match(normParser.SEMICOLON)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 175
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==normParser.SINGLELINE or _la==normParser.MULTILINE:
                    self.state = 174
                    self.comments()


                self.state = 178
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==normParser.WS or _la==normParser.NS:
                    self.state = 177
                    _la = self._input.LA(1)
                    if not(_la==normParser.WS or _la==normParser.NS):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 180
                self.multiLineExpression()
                self.state = 182
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==normParser.WS or _la==normParser.NS:
                    self.state = 181
                    _la = self._input.LA(1)
                    if not(_la==normParser.WS or _la==normParser.NS):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 184
                self.match(normParser.SEMICOLON)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommentsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MULTILINE(self):
            return self.getToken(normParser.MULTILINE, 0)

        def SINGLELINE(self, i:int=None):
            if i is None:
                return self.getTokens(normParser.SINGLELINE)
            else:
                return self.getToken(normParser.SINGLELINE, i)

        def getRuleIndex(self):
            return normParser.RULE_comments

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComments" ):
                listener.enterComments(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComments" ):
                listener.exitComments(self)




    def comments(self):

        localctx = normParser.CommentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_comments)
        self._la = 0 # Token type
        try:
            self.state = 196
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [normParser.MULTILINE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 188
                self.match(normParser.MULTILINE)
                pass
            elif token in [normParser.SINGLELINE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 189
                self.match(normParser.SINGLELINE)
                self.state = 193
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==normParser.SINGLELINE:
                    self.state = 190
                    self.match(normParser.SINGLELINE)
                    self.state = 195
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExportsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SPACED_EXPORT(self):
            return self.getToken(normParser.SPACED_EXPORT, 0)

        def typeName(self):
            return self.getTypedRuleContext(normParser.TypeNameContext,0)


        def VARNAME(self, i:int=None):
            if i is None:
                return self.getTokens(normParser.VARNAME)
            else:
                return self.getToken(normParser.VARNAME, i)

        def DOT(self, i:int=None):
            if i is None:
                return self.getTokens(normParser.DOT)
            else:
                return self.getToken(normParser.DOT, i)

        def AS(self):
            return self.getToken(normParser.AS, 0)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(normParser.WS)
            else:
                return self.getToken(normParser.WS, i)

        def NS(self, i:int=None):
            if i is None:
                return self.getTokens(normParser.NS)
            else:
                return self.getToken(normParser.NS, i)

        def getRuleIndex(self):
            return normParser.RULE_exports

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExports" ):
                listener.enterExports(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExports" ):
                listener.exitExports(self)




    def exports(self):

        localctx = normParser.ExportsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_exports)
        self._la = 0 # Token type
        try:
            self.state = 223
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,33,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 198
                self.match(normParser.SPACED_EXPORT)
                self.state = 199
                self.typeName()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 200
                self.match(normParser.SPACED_EXPORT)
                self.state = 201
                self.typeName()
                self.state = 203
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==normParser.WS or _la==normParser.NS:
                    self.state = 202
                    _la = self._input.LA(1)
                    if not(_la==normParser.WS or _la==normParser.NS):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 205
                self.match(normParser.VARNAME)
                self.state = 210
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==normParser.DOT:
                    self.state = 206
                    self.match(normParser.DOT)
                    self.state = 207
                    self.match(normParser.VARNAME)
                    self.state = 212
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 221
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,32,self._ctx)
                if la_ == 1:
                    self.state = 214
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==normParser.WS or _la==normParser.NS:
                        self.state = 213
                        _la = self._input.LA(1)
                        if not(_la==normParser.WS or _la==normParser.NS):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()


                    self.state = 216
                    self.match(normParser.AS)
                    self.state = 218
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==normParser.WS or _la==normParser.NS:
                        self.state = 217
                        _la = self._input.LA(1)
                        if not(_la==normParser.WS or _la==normParser.NS):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()


                    self.state = 220
                    self.match(normParser.VARNAME)


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SPACED_IMPORT(self):
            return self.getToken(normParser.SPACED_IMPORT, 0)

        def VARNAME(self, i:int=None):
            if i is None:
                return self.getTokens(normParser.VARNAME)
            else:
                return self.getToken(normParser.VARNAME, i)

        def DOT(self, i:int=None):
            if i is None:
                return self.getTokens(normParser.DOT)
            else:
                return self.getToken(normParser.DOT, i)

        def TIMES(self):
            return self.getToken(normParser.TIMES, 0)

        def typeName(self):
            return self.getTypedRuleContext(normParser.TypeNameContext,0)


        def AS(self):
            return self.getToken(normParser.AS, 0)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(normParser.WS)
            else:
                return self.getToken(normParser.WS, i)

        def NS(self, i:int=None):
            if i is None:
                return self.getTokens(normParser.NS)
            else:
                return self.getToken(normParser.NS, i)

        def getRuleIndex(self):
            return normParser.RULE_imports

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImports" ):
                listener.enterImports(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImports" ):
                listener.exitImports(self)




    def imports(self):

        localctx = normParser.ImportsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_imports)
        self._la = 0 # Token type
        try:
            self.state = 257
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,39,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 225
                self.match(normParser.SPACED_IMPORT)
                self.state = 226
                self.match(normParser.VARNAME)
                self.state = 231
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,34,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 227
                        self.match(normParser.DOT)
                        self.state = 228
                        self.match(normParser.VARNAME) 
                    self.state = 233
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,34,self._ctx)
